--- a/client-side/src/styles.scss
+++ b/client-side/src/styles.scss
@@ -1,1 +1,17 @@
 /* You can add global styles to this file, and also import other style files */
+:root {
+  --azul-claro: #183153;
+  --azul-safra: #1e2044;
+  --azul-escuro-safra: #00003c;
+  --azul-claro-safra: #c4dbe5;
+  --gold-safra: #d4ad68;
+  --cinza-safra: #ededed;
+  --preto-claro: #212121;
+}
+
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: "Roboto", sans-serif;
+}
