fix: canva e btn login/cadastro

--- a/client-side/src/app/components/arf-cadastro/arf-cadastro.component.html
+++ b/client-side/src/app/components/arf-cadastro/arf-cadastro.component.html
@@ -25,8 +25,8 @@
       Confirme sua senha
       <input type="password" id="inptCsenha" />
       <label id="errorCSenha"></label>
-      <button class="btnLogin" onclick="cadastrar()">Cadastrar</button>
-      <p>Já possui uma conta?<a href="login.html"> faça login aqui!</a></p>
+      <button class="btnLogar" onclick="cadastrar()">Cadastrar</button>
+      <p>Já possui uma conta?<a [routerLink]="['/login']"> faça login aqui!</a></p>
     </div>
   </div>
   <div class="canvalogin">
