--- a/client-side/src/app/components/arf-homepage/arf-home-contato/arf-home-contato.desktop.scss
+++ b/client-side/src/app/components/arf-homepage/arf-home-contato/arf-home-contato.desktop.scss
@@ -5,7 +5,7 @@
   background-color: var(--preto-claro);
   background-color: #212121e5;
   color: #fff;
-  padding: 50px 0;
+  padding: 30px 20px;
 }
 
 .contato-text {
@@ -23,13 +23,12 @@
 }
 
 /* formulário */
-.form {
+form {
   display: flex;
   flex-direction: column;
-  align-items: flex-start;
   row-gap: 5px;
-  width: 35%;
-  align-self: center;
+  width: 70%;
+  height: 570px;
 }
 
 .form ul {
