adição do atendimento online no cadastro e login

--- a/client-side/src/app/components/arf-login/arf-login.component.html
+++ b/client-side/src/app/components/arf-login/arf-login.component.html
@@ -22,6 +22,6 @@
 </div>
 <div class="footerLogin">
     <p>© 2022 Empresa, Inc, Todos os direitos reservados</p>
-    <a href="#">Suporte</a>
+    <a href="https://arfas-sp.tomticket.com?account=3782528P15092022080207" target="_blank">Suporte</a>
 </div>
 </section>
