fix: canva cadastro/login

--- a/client-side/src/app/components/arf-login/arf-login.component.html
+++ b/client-side/src/app/components/arf-login/arf-login.component.html
@@ -19,6 +19,7 @@
     </div>
 </div>
 <div class="canvalogin">
+    <img src="/assets/imagens/stats-amico.svg" />
 </div>
 <div class="footerLogin">
     <p>© 2022 Empresa, Inc, Todos os direitos reservados</p>
