feat/montagem-dashboard

--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard.component.html
@@ -1,7 +1,7 @@
 <!-- Title -->
 <section class="title-container">
   <img [src]="titleIcon" />
-  <h2>{{ title }}</h2>
+  <label>{{ title }}</label>
 </section>
 
 <!-- Filters -->
