--- a/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.html
@@ -1,2 +1,11 @@
-<!-- <arf-oversight-navbar></arf-oversight-navbar> -->
-<arf-dashboard></arf-dashboard>
+<section class="oversight-page">
+  <!-- <arf-oversight-navbar></arf-oversight-navbar> -->
+
+  <article class="dashboards-container">
+    <arf-dashboard
+      class="arf-dashboard"
+      title="HDD"
+      titleIcon="/assets/icones/hard-drive-solid.svg"
+    ></arf-dashboard>
+  </article>
+</section>
