--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-filters/arf-filters.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-filters/arf-filters.component.scss
@@ -23,7 +23,6 @@
 .checkboxes {
   position: absolute;
   border: 1px #dadada solid;
-  transition: all 0.3s;
   z-index: 999;
   background-color: #fff;
   width: 100%;
@@ -39,4 +38,35 @@
 
 select {
   font-weight: bold;
+}
+
+// Component
+.filters-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  column-gap: 5px;
+  padding-bottom: 7px;
+  width: 100%;
+
+  li {
+    min-width: 80px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    select {
+      font-weight: 400;
+      width: 100%;
+    }
+
+    input,
+    select {
+      text-align: center;
+      border-radius: 5px;
+      border: 1px solid #000;
+      height: 22px;
+    }
+  }
 }
