--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-lista/arf-lista.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-lista/arf-lista.component.html
@@ -7,7 +7,7 @@
       </th>
     </tr>
   </thead>
-  <tbody>
+  <!-- <tbody>
     <tr *ngFor="let userData of usersData">
       <td>
         {{ userData.id }}
@@ -31,5 +31,5 @@
         {{ userData.data }}
       </td>
     </tr>
-  </tbody>
+  </tbody> -->
 </table>
