--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-filters/arf-filters.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-filters/arf-filters.component.scss
@@ -1,11 +1,16 @@
 // select of checkboxes
 .multiselect {
-  width: fit-content;
+  width: fit-content !important;
   position: relative;
+
+  select {
+    width: fit-content !important;
+  }
 }
 
 .selectBox {
   position: relative;
+  display: flex;
 }
 
 .selectBox select {
@@ -20,24 +25,36 @@
   bottom: 0;
 }
 
-.checkboxes {
+.checkboxes-container {
   position: absolute;
   border: 1px #dadada solid;
   z-index: 999;
   background-color: #fff;
   width: 100%;
-}
+  // opacity: 1 !important;
+  display: flex;
+  flex-direction: column;
 
-.checkboxes label {
-  display: block;
-}
+  .checkbox {
+    display: flex;
+    width: 100%;
 
-.checkboxes label:hover {
-  background-color: #1e90ff;
+    &:hover {
+      background-color: #d4ad68;
+      display: flex;
+      align-items: center;
+    }
+
+    input {
+      width: 10px !important;
+      margin-right: 2px !important;
+    }
+  }
 }
 
 select {
   font-weight: bold;
+  text-align: center;
 }
 
 // Component
@@ -45,28 +62,45 @@ select {
   display: flex;
   justify-content: center;
   align-items: center;
-  column-gap: 5px;
-  padding-bottom: 7px;
-  width: 100%;
+  padding: 0px 5px 3px;
+  gap: 5px;
+  height: 33px;
+  border-bottom: 1px solid #000000;
+
+  li:nth-of-type(2) {
+    width: auto !important;
+  }
 
   li {
-    min-width: 80px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
+    padding: 0px;
+    isolation: isolate;
+    width: fit-content;
+    height: 26px;
 
-    select {
+    label {
+      font-family: "Roboto";
+      font-style: normal;
       font-weight: 400;
-      width: 100%;
+      font-size: 10px;
+      line-height: 12px;
     }
 
-    input,
-    select {
-      text-align: center;
+    select,
+    input {
+      box-sizing: border-box;
+      width: 80px;
+      height: 14px;
+      background: #ffffff;
+      border: 1px solid #000000;
       border-radius: 5px;
-      border: 1px solid #000;
-      height: 22px;
+      font-family: "Roboto";
+      font-style: normal;
+      font-weight: 400;
+      font-size: 9px;
+      line-height: 11px;
     }
   }
 }
