--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-lista/arf-lista.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-lista/arf-lista.component.scss
@@ -1,9 +1,49 @@
+table {
+  font-size: 10px;
+  line-height: 12px;
+  text-align: center;
+  width: 100%;
+
+  thead {
+    display: flex;
+    justify-content: space-between;
+
+    th,
+    td,
+    label,
+    i {
+      cursor: pointer;
+    }
+
+    tr {
+      width: fit-content;
+      height: fit-content;
+
+      &:hover {
+        background-color: rgba(128, 128, 128, 0.495);
+      }
+
+      th {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        column-gap: 2px;
+
+        i {
+          font-size: 8px;
+          height: fit-content;
+          width: fit-content;
+        }
+      }
+    }
+  }
+}
+
 img {
   width: 20px;
 }
 
 i {
-  cursor: pointer;
   font-size: 1rem;
   width: 16px;
   height: 16px;
