feat: mexendo nas dashs

--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard.component.scss
@@ -5,8 +5,8 @@
   align-items: center;
   padding: 5px 12px;
   gap: 10px;
-  height: 250px;
-  width: 380px;
+  height: 100%;
+  width: 100%;
   border-radius: 10px;
 
   .title-container {
