--- a/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.html
@@ -6,14 +6,33 @@
     <nav class="alertas-container"></nav>
 
     <div class="first-row dash-rows">
-      <arf-dashboard class="arf-dashboard" componente="HDD" titleIcon="/assets/icones/hard-drive-solid.svg">
+      <arf-dashboard
+        class="arf-dashboard"
+        componente="HDD"
+        titleIcon="/assets/icones/hard-drive-solid.svg"
+      >
+      </arf-dashboard>
+      <arf-dashboard
+        class="arf-dashboard"
+        componente="Alertas"
+        titleIcon="/assets/icones/hard-drive-solid.svg"
+      >
       </arf-dashboard>
     </div>
 
     <div class="second-row dash-rows">
-      <arf-dashboard class="arf-dashboard" componente="RAM" titleIcon="/assets/icones/memory-solid.svg"></arf-dashboard>
-      <arf-dashboard class="arf-dashboard" componente="CPU" titleIcon="/assets/icones/microchip-solid.svg">
+      <arf-dashboard
+        class="arf-dashboard"
+        componente="RAM"
+        titleIcon="/assets/icones/memory-solid.svg"
+      ></arf-dashboard>
+      <arf-dashboard
+        class="arf-dashboard"
+        componente="CPU"
+        titleIcon="/assets/icones/microchip-solid.svg"
+      >
       </arf-dashboard>
+      -->
     </div>
   </article>
 </section>
