fix: Arrumando caminho da imagem do index

--- a/client-side/src/app/components/arf-homepage/arf-home-sobre/arf-home-sobre.component.html
+++ b/client-side/src/app/components/arf-homepage/arf-home-sobre/arf-home-sobre.component.html
@@ -23,7 +23,7 @@
       </p>
     </div>
 
-    <img src="assets/imagens/Site Stats-amico.svg" alt="imagem" />
+    <img src="assets/imagens/stats-amico.svg" alt="imagem" />
     <div class="bar"></div>
   </li>
   <li>
