feat: construção da dashboard (parei nos alertas)

--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard.component.html
@@ -1,4 +1,4 @@
-<section class="arf-dashboard-container">
+<arf-dash-card class="arf-dashboard-container">
   <!-- Title -->
   <section class="title-container">
     <img [src]="titleIcon" />
@@ -14,4 +14,4 @@
 
   <!-- Chart -->
   <!-- <arf-chart *ngIf="exibicao === 'grafica'" [componente]='componente'></arf-chart> -->
-</section>
+</arf-dash-card>
