--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-filters/arf-filters.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-filters/arf-filters.component.html
@@ -50,6 +50,6 @@
   <!-- Pesquisa -->
   <li *ngIf="exibicaoSelect.value === 'listada'">
     <label>Pesquisa</label>
-    <input #pesquisaInput (keydown)="filtrarDashboard('')" type="text" />
+    <input class="pesquisar-input" #pesquisaInput (keydown)="filtrarDashboard('')" type="text" />
   </li>
 </ul>
