--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard.component.scss
@@ -3,7 +3,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 5px 12px;
+  padding: 10px 0 5px 0.5px;
   gap: 10px;
   height: 100%;
   width: 100%;
@@ -14,22 +14,15 @@
     justify-content: center;
     align-items: center;
     gap: 4px;
-    width: 74px;
-    height: 30px;
 
     img {
-      width: 30px;
-      width: 30px;
+      width: 35px;
+      width: 35px;
     }
 
     label {
-      height: 23px;
-      width: 40px;
-      font-family: Roboto;
-      font-size: 20px;
+      font-size: 1.7rem;
       font-weight: 900;
-      line-height: 23px;
-      text-align: center;
     }
   }
 
@@ -42,5 +35,7 @@
 
   arf-lista {
     width: 100%;
+    height: 100%;
+    overflow: auto;
   }
 }
