--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-filters/arf-filters.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-filters/arf-filters.component.scss
@@ -1,3 +1,34 @@
+// Component
+.filters-container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0px 5px 7px;
+  gap: 5px;
+  border-bottom: 1px solid #000000;
+  font-size: 1rem;
+
+  li {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    select,
+    input {
+      box-sizing: border-box;
+      background: #ffffff;
+      border: 1px solid #000000;
+      border-radius: 5px;
+      font-weight: 400;
+      text-align: center;
+    }
+
+    .pesquisar-input {
+      width: 150px;
+    }
+  }
+}
+
 // select of checkboxes
 .multiselect {
   width: fit-content !important;
@@ -37,15 +68,17 @@
   .checkbox {
     display: flex;
     width: 100%;
+    padding: 3px;
+    border: 1px solid black;
+    border-top: none;
+    font-size: 0.85rem;
 
     &:hover {
       background-color: #d4ad68;
-      display: flex;
-      align-items: center;
     }
 
     input {
-      width: 10px !important;
+      width: 15px !important;
       margin-right: 2px !important;
     }
   }
@@ -54,52 +87,4 @@
 select {
   font-weight: bold;
   text-align: center;
-}
-
-// Component
-.filters-container {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0px 5px 3px;
-  gap: 5px;
-  height: 33px;
-  border-bottom: 1px solid #000000;
-
-  li:nth-of-type(2) {
-    width: auto !important;
-  }
-
-  li {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 0px;
-    isolation: isolate;
-    width: fit-content;
-    height: 26px;
-
-    label {
-      font-family: "Roboto";
-      font-style: normal;
-      font-weight: 400;
-      font-size: 10px;
-      line-height: 12px;
-    }
-
-    select,
-    input {
-      box-sizing: border-box;
-      width: 80px;
-      height: 14px;
-      background: #ffffff;
-      border: 1px solid #000000;
-      border-radius: 5px;
-      font-family: "Roboto";
-      font-style: normal;
-      font-weight: 400;
-      font-size: 9px;
-      line-height: 11px;
-    }
-  }
 }
