--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-lista/arf-lista.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-lista/arf-lista.component.scss
@@ -1,16 +1,30 @@
 table {
-  font-size: 10px;
-  line-height: 12px;
   text-align: center;
   width: 100%;
   height: 100%;
   border-collapse: collapse;
+  font-size: 0.9rem;
 
   th,
   td,
   label,
   i {
     cursor: pointer;
+  }
+
+  th,
+  td {
+    border: 1px solid #000;
+    padding: 1px;
+  }
+
+  th div {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: max-content;
+    min-width: 100%;
+    column-gap: 3px;
   }
 
   .body-rows:hover {
@@ -23,7 +37,10 @@ img {
 }
 
 i {
-  font-size: 1rem;
-  width: 16px;
-  height: 16px;
+  font-size: 0.7rem;
+}
+
+.redAlert {
+  background-color: red;
+  font-weight: 700;
 }
