inicio da navbar-oversight

--- a/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.scss
@@ -5,10 +5,10 @@ $inner-gap: 7px;
   height: 100vh;
   display: flex;
 
-  .mock-navbar {
+  .oversight-navbar {
     width: 16%;
     height: 100vh;
-    background-color: grey;
+    background-color: #EDEDED;
   }
 
   .dashboards-container {
