--- a/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.html
@@ -1,6 +1,5 @@
 <section class="oversight-page">
-  <!-- <arf-oversight-navbar></arf-oversight-navbar> -->
-  <div class="mock-navbar"></div>
+  <app-arf-oversight-navbar class="oversight-navbar"></app-arf-oversight-navbar>
 
   <article class="dashboards-container">
     <div class="first-row dash-rows">
