--- a/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.html
@@ -6,8 +6,8 @@
     <div class="first-row dash-rows">
       <arf-dashboard class="arf-dashboard" componente="HDD" titleIcon="/assets/icones/hard-drive-solid.svg">
       </arf-dashboard>
-      <arf-dashboard class="arf-dashboard" componente="Alertas" titleIcon="/assets/icones/circle-exclamation-solid.svg">
-      </arf-dashboard>
+      <arf-alertas-dash class="arf-alerta-dash">
+      </arf-alertas-dash>
     </div>
 
     <div class="second-row dash-rows">
