--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard.component.scss
@@ -3,11 +3,37 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10px 0 5px 0.5px;
+  // padding: 10px 0 5px 0.5px;
+  // padding: 10px 0 5px 2px;
+  padding: 10px;
+  padding-right: 2px;
   gap: 10px;
   height: 100%;
-  width: 100%;
+  width: fit-content;
   border-radius: 10px;
+  box-shadow: 0 0 2px 0 #000;
+  border: 2px solid #000;
+
+  /* width */
+  ::-webkit-scrollbar {
+    width: 10px;
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+    background-color: #ededed;
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    background-color: var(--azul-safra);
+    border-radius: 5px;
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: var(--azul-safra);
+  }
 
   .title-container {
     display: flex;
