--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-filters/arf-filters.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-filters/arf-filters.component.scss
@@ -64,13 +64,13 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  border: 1px solid #000;
+  border-top: none;
 
   .checkbox {
     display: flex;
     width: 100%;
     padding: 3px;
-    border: 1px solid black;
-    border-top: none;
     font-size: 0.85rem;
 
     &:hover {
