--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-lista/arf-lista.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-lista/arf-lista.component.scss
@@ -2,8 +2,9 @@ table {
   text-align: center;
   width: 100%;
   height: 100%;
-  border-collapse: collapse;
   font-size: 0.9rem;
+  position: relative;
+  border-collapse: collapse;
 
   th,
   td,
@@ -16,6 +17,25 @@ table {
   td {
     border: 1px solid #000;
     padding: 1px;
+
+  }
+
+  .head-rows {
+    border-top: none;
+    border-bottom: none;
+
+    th {
+      background-color: #fff;
+      top: 0;
+      position: sticky;
+      border: 1px solid #000;
+      // border-top: 1px solid #000;
+      // border-bottom: 1px solid #000;
+    }
+  }
+
+  .body-rows:nth-child(even) {
+    background-color: rgba(128, 128, 128, 0.5);
   }
 
   th div {
@@ -24,11 +44,15 @@ table {
     align-items: center;
     width: max-content;
     min-width: 100%;
+    height: 100%;
     column-gap: 3px;
+    // border-top: 1px solid #000;
+    // border-bottom: 1px solid #000;
+    // border: 1px solid #000;
   }
 
   .body-rows:hover {
-    background-color: rgba(128, 128, 128, 0.495);
+    background-color: rgba(128, 128, 128, 0.2);
   }
 }
 
