feat: construção do chart

--- a/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.html
@@ -1,5 +1,5 @@
 <section class="oversight-page">
-  <app-arf-oversight-navbar class="oversight-navbar"></app-arf-oversight-navbar>
+  <arf-oversight-navbar class="oversight-navbar"></arf-oversight-navbar>
 
   <article class="dashboards-container">
     <div class="first-row dash-rows">
