feat: construção chartjs

--- a/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.html
@@ -3,15 +3,15 @@
 
   <article class="dashboards-container">
     <div class="first-row dash-rows">
-      <arf-dashboard class="arf-dashboard" componente="HDD" titleIcon="/assets/icones/hard-drive-solid.svg">
+      <arf-dashboard class="dash-cards arf-dashboard" componente="HDD" titleIcon="/assets/icones/hard-drive-solid.svg">
       </arf-dashboard>
-      <arf-alertas-dash class="arf-alerta-dash">
+      <arf-alertas-dash class="dash-cards arf-alerta-dash">
       </arf-alertas-dash>
     </div>
 
     <div class="second-row dash-rows">
-      <arf-dashboard class="arf-dashboard" componente="RAM" titleIcon="/assets/icones/memory-solid.svg"></arf-dashboard>
-      <arf-dashboard class="arf-dashboard" componente="CPU" titleIcon="/assets/icones/microchip-solid.svg">
+      <arf-dashboard class="dash-cards arf-dashboard" componente="RAM" titleIcon="/assets/icones/memory-solid.svg"></arf-dashboard>
+      <arf-dashboard class="dash-cards arf-dashboard" componente="CPU" titleIcon="/assets/icones/microchip-solid.svg">
       </arf-dashboard>
     </div>
   </article>
