--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard.component.scss
@@ -10,6 +10,7 @@
   gap: 10px;
   height: 100%;
   width: fit-content;
+  min-width: 45%;
   border-radius: 10px;
   box-shadow: 0 0 2px 0 #000;
   border: 2px solid #000;
