--- a/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.scss
@@ -39,7 +39,7 @@ $inner-gap: 3px;
 
     .arf-dashboard {
       height: 100%;
-      width: fit-content;
+      width: 100%;
     }
 
     // .alertas-container {
