feat: construção chartJS

--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-chart/arf-chart.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-chart/arf-chart.component.html
@@ -1,2 +1,3 @@
-<canvas baseChart [data]="chartData" [options]="chartOptions" [type]="chartType">
+<div class="chart-legends"></div>
+<canvas [legend]="true" baseChart [data]="chartData" [options]="chartOptions" [type]="chartType">
 </canvas>
