--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-filters/arf-filters.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-filters/arf-filters.component.scss
@@ -1,17 +1,29 @@
+:host {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
 // Component
 .filters-container {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 0px 5px 7px;
+  padding: 0px 5px 3px;
   gap: 5px;
   border-bottom: 1px solid #000000;
-  font-size: 1rem;
+  font-size: .8rem;
 
   li {
     display: flex;
     flex-direction: column;
     align-items: center;
+
+    label {
+      letter-spacing: 1px;
+      font-weight: 700;
+    }
 
     select,
     input {
@@ -69,17 +81,18 @@
 
   .checkbox {
     display: flex;
+    align-items: center;
+    column-gap: 2px;
     width: 100%;
-    padding: 3px;
-    font-size: 0.85rem;
+    padding: 0 3px;
 
     &:hover {
       background-color: #d4ad68;
     }
 
-    input {
-      width: 15px !important;
-      margin-right: 2px !important;
+    i {
+      line-height: 22px;
+      color: var(--azul-safra);
     }
   }
 }
@@ -87,4 +100,9 @@
 select {
   font-weight: bold;
   text-align: center;
+
+}
+
+option:hover {
+  box-shadow: 0 0 10px 100px #000 inset;
 }
