--- a/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.html
@@ -10,7 +10,8 @@
     </div>
 
     <div class="second-row dash-rows">
-      <arf-dashboard class="dash-cards arf-dashboard" componente="RAM" titleIcon="/assets/icones/memory-solid.svg"></arf-dashboard>
+      <arf-dashboard class="dash-cards arf-dashboard" componente="RAM" titleIcon="/assets/icones/memory-solid.svg">
+      </arf-dashboard>
       <arf-dashboard class="dash-cards arf-dashboard" componente="CPU" titleIcon="/assets/icones/microchip-solid.svg">
       </arf-dashboard>
     </div>
