--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard.component.scss
@@ -3,14 +3,12 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  // padding: 10px 0 5px 0.5px;
-  // padding: 10px 0 5px 2px;
   padding: 10px;
   padding-right: 2px;
+  padding-bottom: 2px;
   gap: 10px;
+  width: 100%;
   height: 100%;
-  width: fit-content;
-  min-width: 45%;
   border-radius: 10px;
   box-shadow: 0 0 2px 0 #000;
   border: 2px solid #000;
@@ -43,26 +41,33 @@
     gap: 4px;
 
     img {
-      width: 35px;
-      width: 35px;
+      width: 25px;
+      width: 25px;
     }
 
     label {
-      font-size: 1.7rem;
+      font-size: 1.3rem;
       font-weight: 900;
     }
   }
 
-  arf-filters {
-    width: 100%;
+  .chart-container {
     display: flex;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-  }
-
-  arf-lista {
-    width: 100%;
+    row-gap: 10px;
     height: 100%;
-    overflow: auto;
+
+    .date-container {
+      display: flex;
+      column-gap: 10px;
+
+      .dates {
+        font-size: 0.9rem;
+        display: flex;
+        align-items: center;
+        column-gap: 5px;
+      }
+    }
   }
 }
