--- a/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.scss
@@ -56,7 +56,7 @@ $inner-gap: 3px;
       justify-content: center;
       column-gap: $inner-gap;
       width: 100%;
-      max-height: 50%;
+      height: 50%;
     }
   }
 }
