--- a/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.html
+++ b/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.html
@@ -5,8 +5,8 @@
     <div class="first-row dash-rows">
       <arf-dashboard class="dash-cards arf-dashboard" componente="HDD" titleIcon="/assets/icones/hard-drive-solid.svg">
       </arf-dashboard>
-      <arf-alertas-dash class="dash-cards arf-alerta-dash">
-      </arf-alertas-dash>
+      <arf-kpi class="dash-cards arf-kpi-dash">
+      </arf-kpi>
     </div>
 
     <div class="second-row dash-rows">
