--- a/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-oversight-page.component.scss
@@ -1,6 +1,6 @@
 $inner-gap: 3px;
 
-.arf-alerta-dash {
+.arf-kpi-dash {
   background-color: #fff;
   display: flex;
   flex-direction: column;
@@ -12,7 +12,6 @@ $inner-gap: 3px;
   border-radius: 10px;
   box-shadow: 0 0 2px 0 #000;
   border: 2px solid #000;
-  display: none;
 }
 
 .oversight-page {
