--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-chart/arf-chart.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-chart/arf-chart.component.scss
@@ -1,14 +1,49 @@
 :host {
-  height: 100%;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
-}
-
-canvas {
-  position: relative;
   width: 100%;
-  height: 100%;
-}
+  column-gap: 5px;
 
-.chart-legends {}
+  .canvas-container {
+    width: 100%;
+    height: 100%;
+    position: relative;
+
+    canvas {
+      height: 100% !important;
+      width: 100% !important;
+      max-height: 175px;
+    }
+
+    label {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -100%);
+      text-align: center;
+    }
+  }
+
+  .chart-legends {
+
+    .legends {
+      width: fit-content;
+      display: flex;
+      align-items: center;
+      column-gap: 2px;
+      overflow: auto;
+      margin-bottom: 3px;
+
+      &-box {
+        width: 10px;
+        height: 10px;
+      }
+
+      &-label {
+        font-size: .8rem;
+      }
+    }
+
+  }
+}
