--- a/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard.component.scss
+++ b/client-side/src/app/components/arf-oversight-page/arf-dashboard/arf-dashboard.component.scss
@@ -3,10 +3,9 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 10px;
-  padding-right: 2px;
-  padding-bottom: 2px;
-  gap: 10px;
+  padding: 2px 5px;
+  padding-left: 5px;
+  gap: 5px;
   width: 100%;
   height: 100%;
   border-radius: 10px;
@@ -39,6 +38,7 @@
     justify-content: center;
     align-items: center;
     gap: 4px;
+    padding-bottom: 15px;
 
     img {
       width: 25px;
@@ -55,18 +55,37 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    row-gap: 10px;
+    row-gap: 5px;
     height: 100%;
+    width: 100%;
 
     .date-container {
       display: flex;
       column-gap: 10px;
+
+      input {
+        text-align: center;
+      }
 
       .dates {
         font-size: 0.9rem;
         display: flex;
         align-items: center;
         column-gap: 5px;
+      }
+    }
+
+    #hoje-btn,
+    .hoje-btn {
+      background: rgba(30, 32, 68, 0.8);
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+      border-radius: 5px;
+      color: #fff;
+      padding: 3px;
+      cursor: pointer;
+
+      &-on {
+        background: #1E2044 !important;
       }
     }
   }
